--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://AntonNordgren.github.io/",
+  "homepage": "https://AntonNordgren.github.io/ui-test/",
   "name": "client",
   "private": true,
   "version": "0.0.0",
